page-header rуsponsive start

--- a/src/less/blocks/global_scaffolding.less
+++ b/src/less/blocks/global_scaffolding.less
@@ -20,6 +20,10 @@ html {
 body {
   background-color: @body-bg;
   margin: 0;
+  font-family: @font-family;
+  font-size: @font-size;
+  color: @text-color;
+  line-height: @line-height;
 }
 
 a {
@@ -37,4 +41,8 @@ img {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
+}
+
+[role="button"] {
+  cursor: pointer;
 }
