--- a/src/less/bootstrap/scaffolding.less
+++ b/src/less/bootstrap/scaffolding.less
@@ -74,12 +74,13 @@ figure {
 // Images
 
 img {
-  vertical-align: middle;
+  // vertical-align: middle;
+  max-width: 100%;
 }
 
 // Responsive images (ensure images don't scale beyond their parents)
 .img-responsive {
-  .img-responsive();
+  // .img-responsive();
 }
 
 // Rounded corners
