--- a/src/less/bootstrap/type.less
+++ b/src/less/bootstrap/type.less
@@ -13,12 +13,12 @@ h1, h2, h3, h4, h5, h6,
   line-height: @headings-line-height;
   color: @headings-color;
 
-  small,
-  .small {
-    font-weight: normal;
-    line-height: 1;
-    color: @headings-small-color;
-  }
+  // small,
+  // .small {
+  //   font-weight: normal;
+  //   line-height: 1;
+  //   color: @headings-small-color;
+  // }
 }
 
 h1, .h1,
