promo slider mobile

--- a/src/less/main-nav.less
+++ b/src/less/main-nav.less
@@ -1,10 +1,14 @@
 .main-nav {
+	@media (min-width: @screen-md) {
+		margin-top: 3px;
+		position: static;
+	}
 	&__hamburger {
 		width: 29px;
 		height: 24px;
 		background: url(../img/burger.png);
 		position: absolute;
-		top: 31px;
+		top: 15px;
 		right: 15px;
 	}
 	&__list {
