--- a/src/less/page-header.less
+++ b/src/less/page-header.less
@@ -10,9 +10,13 @@
 		}
 	}
 	&__contacts {
+		margin-top: 10px;
 		strong {
 			display: block;
 			font-size: 18px;
 		}
+	}
+	.btn {
+		margin-top: 11px;
 	}
 }
