promo slider tablet and desctop

--- a/src/less/promo.less
+++ b/src/less/promo.less
@@ -14,15 +14,35 @@
 		line-height: 26px;
 		text-align: center;
 		margin-bottom: 21px;
+		@media (min-width: @screen-sm) {
+			font-size: @font-size--h1;
+			line-height: 42px;
+			text-align: left;
+			span {
+				background-color: rgba(255, 255, 255, 0.9);
+			}
+		}
 	}
 	&__slide-text {
 		line-height: 24px;
 		text-align: center;
+		@media (min-width: @screen-sm) {
+			font-size: 18px;
+			text-align: left;
+			span {
+				background-color: rgba(255, 255, 255, 0.9);
+				padding-top: 3px;
+				padding-bottom: 3px;
+			}
+		}
 	}
 	&__slide-inner {
 		background-color: rgba(255, 255, 255, 0.9);
 		padding-top: 9px;
 		padding-bottom: 9px;
+		@media (min-width: @screen-sm) {
+			background-color: transparent;
+		}
 	}
 	&__slider-tabs {
 		list-style: none;
