--- a/src/less/relax.less
+++ b/src/less/relax.less
@@ -1,17 +1,51 @@
 .relax {
-	background: url(../img/relax-bg.png);
-	background-size: cover;
+	background: url(../img/relax-bg.png) no-repeat;
 	background-position: center;
 	padding-top: 53px;
 	height: 347px;
+	max-width: 780px;
+	@media (min-width: @screen-sm) {
+		background-size: contain;
+		height: auto;
+	}
 	&__title {
 		font-size: 26px;
 		margin-bottom: 36px;
 		margin-top: 0;
 		text-align: center;
 		font-weight: 400;
+		@media (min-width: @screen-sm) {
+			font-size: @font-size--h2;
+			margin-bottom: 32px;
+		}
 	}
 	&__wrapper-text {
 		text-align: center;
+		@media (min-width: @screen-sm) {
+			width: 567px;
+			margin: 0 auto;
+			margin-bottom: 36px;
+		}
+	}
+	&__features {
+		list-style: none;
+		padding: 0;
+		text-align: center;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		justify-content: space-between;
+		li {
+			width: 80px;
+			margin-bottom: 27px;
+			text-align: center;
+			font-size: 14px;
+			text-transform: uppercase;
+			font-weight: 500;
+			vertical-align: top;
+			img {
+				margin-bottom: 14px;
+			}
+		}
 	}
 }
