--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -892,7 +892,8 @@
 @btn-text-color: #fff;
 @btn-font-size: 14px;
 @btn-border-radius: 20px;
-
+@btn-border--bordered: 2px solid @btn-text-color;
+@btn-color--bordered-hover: darken(@btn-text-color, 10%);
 
 
 //------------------------------------------------------------------------------
