--- a/src/less/review.less
+++ b/src/less/review.less
@@ -11,15 +11,26 @@
 		font-weight: 400;
 		text-align: center;
 	}
+	&__slide {
+		background-color: #fff;
+		border: 1px solid #17aa92;
+		@media (min-width: @screen-sm) {
+			background-color: transparent;
+			border: none;
+		}
+	}
 	&__author {
 		position: relative;
 		text-align: center;
 		padding-top: 72px;
 		padding-bottom: 29px;
 		font-weight: 500;
-		background-color: #fff;
-		border: 1px solid #17aa92;
 		margin-bottom: 39px;
+		min-height: 305px;
+		@media (min-width: @screen-sm) {
+			background-color: #fff;
+			border: 1px solid #17aa92;
+		}
 		img {
 			position: absolute;
 			left: 50%;
@@ -53,5 +64,8 @@
 	&__slide-footer {
 		font-weight: 400;
 		font-size: 14px;
+	}
+	&__btn {
+		text-align: center;
 	}
 }
