review block update font size h1 for sm md

--- a/src/less/review.less
+++ b/src/less/review.less
@@ -10,6 +10,9 @@
 		font-size: 26px;
 		font-weight: 400;
 		text-align: center;
+		@media (min-width: @screen-sm) {
+			font-size: @font-size--h1;
+		}
 	}
 	&__slide {
 		background-color: #fff;
