--- a/src/less/offers.less
+++ b/src/less/offers.less
@@ -39,6 +39,9 @@
 			font-weight: 500;
 			line-height: 24px;
 			margin-bottom: 8px;
+			@media (min-width: @screen-sm) {
+				font-size: 30px;
+			}
 		}
 		p {
 			margin: 0;
