--- a/src/less/blocks/type.less
+++ b/src/less/blocks/type.less
@@ -1,6 +1,8 @@
 h1,h2,h3,h4,h5,h6 {
 	font-family: @font-family-h;
 	line-height: @line-height;
+	font-weight: 400;
+	margin: 0;
 }
 h1 {
 	font-size: @font-size--h1;
@@ -14,4 +16,9 @@ h3 {
 
 small {
 	font-size: @font-size--small;
+}
+
+p {
+	margin-top: 0;
+	margin-bottom: 10px;
 }
