page-footer add top border

--- a/src/less/page-footer.less
+++ b/src/less/page-footer.less
@@ -1,6 +1,7 @@
 .page-footer {
 	padding-top: 25px;
 	padding-bottom: 25px;
+	border-top: 1px solid #ebebeb;
 	&__logo-socials {
 		text-align: center;
 	}
