room_list all done and add btn--more

--- a/src/less/btn.less
+++ b/src/less/btn.less
@@ -32,4 +32,17 @@
 			border-color: @btn-color--bordered-hover;
 		}
 	}
+	&--more {
+		border: 0;
+		background-color: transparent;
+		color: @gray-base;
+		line-height: normal;
+		padding: 0;
+		border-bottom: 1px dashed;
+		border-radius: 0;
+		&:hover {
+			background-color: transparent;
+			color: @gray-light;
+		}
+	}
 }
