step-1 all done

--- a/src/less/booking-step.less
+++ b/src/less/booking-step.less
@@ -18,6 +18,15 @@
 	&--gray {
 		background-color: #f1f1f1;
 	}
+	&__inner {
+		margin-top: 36px;
+		@media (min-width: @screen-md) {
+			background-color: #fff;
+			padding-top: 29px;
+			padding-bottom: 54px;
+			border: 1px solid #ebebeb;
+		}
+	}
 	&__inner--narrow {
 		@media (min-width: @screen-sm) {
 			width: 380px !important;
