--- a/src/less/booking-form.less
+++ b/src/less/booking-form.less
@@ -10,12 +10,17 @@
 		}
 		@media (min-width: @screen-sm) {
 			display: inline-block;
+			margin-top: 0;
 		}
 		&:first-child {
 			margin-top: 0;
 		}
-		@media (min-width: @screen-sm) {
-			margin-top: 0;
+		@media (min-width: @screen-md) {
+			border-right: 1px solid #ebebeb;
+			padding-bottom: 20px;
+			&:last-child {
+				border-right: 0;
+			}
 		}
 	}
 	&__date-wrapper {
