relax fix line-height on features text

--- a/src/less/relax.less
+++ b/src/less/relax.less
@@ -43,6 +43,7 @@
 			text-transform: uppercase;
 			font-weight: 500;
 			vertical-align: top;
+			line-height: 18px;
 			img {
 				margin-bottom: 14px;
 			}
