offers fix font size for title md

--- a/src/less/offers.less
+++ b/src/less/offers.less
@@ -7,6 +7,9 @@
 		font-weight: 400;
 		margin: 0;
 		margin-bottom: 33px;
+		@media (min-width: @screen-md) {
+			font-size: 30px;
+		}
 	}
 	&__sliders {
 		margin-bottom: 20px;
