--- a/src/less/offers.less
+++ b/src/less/offers.less
@@ -42,8 +42,8 @@
 			font-weight: 500;
 			line-height: 24px;
 			margin-bottom: 8px;
-			@media (min-width: @screen-sm) {
-				font-size: 30px;
+			@media (min-width: @screen-md) {
+				font-size: 14px;
 			}
 		}
 		p {
