--- a/src/less/booking-step.less
+++ b/src/less/booking-step.less
@@ -1,6 +1,9 @@
 .booking-step {
 	padding-top: 50px;
 	padding-bottom: 50px;
+	&:nth-child(odd) {
+		background-color: #f1f1f1;
+	}
 	&__step-count {
 		color: #929292;
 		font-size: 14px;
@@ -13,9 +16,6 @@
 	&__title {
 		font-size: 26px;
 		text-align: center;
-		line-height: 19px;
-	}
-	&--gray {
-		background-color: #f1f1f1;
+		line-height: 32px;
 	}
 }
