--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -886,8 +886,10 @@
 //  Кнопки
 //------------------------------------------------------------------------------
 
-@btn-line-height: 34px;
+@btn-line-height: 37px;
 @btn-bg: @orange-color;
+@btn-bg--green: #0ab89d;
+@btn-bg--green-hover: darken(@btn-bg--green, 10%);
 @btn-bg--hover: @orange-color--darken;
 @btn-text-color: #fff;
 @btn-font-size: 14px;
