--- a/src/less/booking-form.less
+++ b/src/less/booking-form.less
@@ -375,9 +375,22 @@
 
 	&__payment-result-inner {
 		padding-top: 39px;
+		@media (min-width: @screen-md) {
+			width: 780px;
+		}
 		.btn {
 			width: 100%;
 			line-height: 50px;
+		}
+	}
+	&__payment-method {
+		@media (min-width: @screen-sm) {
+			display: flex;
+		}
+	}
+	&__payment-method-item-wrapper {
+		@media (min-width: @screen-sm) {
+			order: 2;
 		}
 	}
 	&__payment-method-item {
@@ -385,27 +398,46 @@
 		background-color: #fff;
 		font-size: 14px;
 		margin-bottom: 20px;
+		margin-left: -15px;
+		margin-right: -15px;
+		@media (min-width: @screen-sm) {
+			margin-right: 0;
+			margin-left: 0;
+		}
 		input[type=radio] {
 			display: none;
 			&:checked + label:before {
 				background: url(../img/icon-check.png);
 			}
 		}
-		.booking-form__payment-method-label {
-			display: block;
-			position: relative;
-			padding: 26px 0 26px 41px;
-			text-transform: uppercase;
-			color: #4c4c4c;
-			&:before {
-				content: "";
-				position: absolute;
-				width: 16px;
-				height: 12px;
-				left: 15px;
-				top: 50%;
-				transform: translate(0,-50%);
-				background: url(../img/icon-uncheck.png);
+	}
+	&__payment-method-label {
+		cursor: pointer;
+		display: block;
+		position: relative;
+		padding: 26px 0 26px 41px;
+		text-transform: uppercase;
+		color: #4c4c4c;
+		&:before {
+			content: "";
+			position: absolute;
+			width: 16px;
+			height: 12px;
+			left: 15px;
+			top: 50%;
+			transform: translate(0,-50%);
+			background: url(../img/icon-uncheck.png);
+		}
+		p {
+			@media (min-width: @screen-sm) {
+				display: inline-block;
+				width: 310px;
+				float: right;
+				padding-right: 50px;
+				color: #4c4c4c;
+				font-size: 14px;
+				text-transform: none;
+				line-height: 18px;
 			}
 		}
 	}
@@ -423,6 +455,9 @@
 			text-transform: uppercase;
 			width: 100%;
 			margin-top: 14px;
+			@media (min-width: @screen-sm) {
+				line-height: 40px;
+			}
 		}
 	}
 	&__payment-result {
@@ -430,6 +465,14 @@
 		background-color: #fff;
 		padding: 26px 41px;
 		margin-bottom: 50px;
+		margin-left: -15px;
+		margin-right: -15px;
+		@media (min-width: @screen-sm) {
+			order: 1;
+			margin-bottom: 20px;
+			margin-left: 15px;
+			margin-right: 0;
+		}
 		h3 {
 			font-family: @font-family-sans-serif;
 			font-size: 14px;
