--- a/src/less/booking-form.less
+++ b/src/less/booking-form.less
@@ -459,6 +459,10 @@
 				line-height: 40px;
 			}
 		}
+		.tooltip {
+			float: right;
+			text-transform: none;
+		}
 	}
 	&__payment-result {
 		border: 1px solid #ebebeb;
