--- a/src/less/blocks/review.less
+++ b/src/less/blocks/review.less
@@ -18,6 +18,7 @@
 		background-color: #fff;
 		border: 1px solid #17aa92;
 		margin-bottom: 39px;
+		margin-top: 29px;
 		@media (min-width: @screen-sm) {
 			background-color: transparent;
 			border: none;
@@ -26,8 +27,7 @@
 	&__author {
 		position: relative;
 		text-align: center;
-		padding-top: 72px;
-		padding-bottom: 29px;
+		padding: 72px 15px 29px 15px;
 		font-weight: 500;
 		min-height: 305px;
 		@media (min-width: @screen-sm) {
@@ -40,6 +40,7 @@
 			transform: translate(-50%);
 			top: -24px;
 			height: 82px;
+			width: auto !important;
 		}
 		p {
 			font-weight: 400;
