--- a/src/less/blocks/offers.less
+++ b/src/less/blocks/offers.less
@@ -11,9 +11,6 @@
 			font-size: 30px;
 		}
 	}
-	&__sliders {
-		margin-bottom: 20px;
-	}
 	&__slide {
 		height: 300px;
 		background-position: center;
@@ -51,10 +48,11 @@
 			margin-bottom: 8px;
 		}
 	}
-	&__dots {
+	.owl-dots {
 		text-align: center;
+		margin-top: 20px;
 	}
-	&__dot {
+	.owl-dot {
 		display: inline-block;
 		margin-right: 20px;
 		width: 15px;
@@ -64,7 +62,7 @@
 		&:last-child {
 			margin-right: 0;
 		}
-		&--active, &:hover {
+		&.active, &:hover {
 			background-color: @orange-color;
 		}
 	}
