--- a/src/less/blocks/tooltip.less
+++ b/src/less/blocks/tooltip.less
@@ -1,8 +1,6 @@
 .tooltip {
 	display: inline-block;
-	width: 16px;
-	height: 17px;
-	background: url(../img/icon-tooltip.png);
+	.sprite(@icon-tooltip);
 	position: relative;
 	&:hover &__text {
 		display: block;
