--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -14,6 +14,10 @@
 		text-decoration: none;
 		color: @btn-text-color;
 	}
+	&:focus {
+		color: @btn-text-color;
+		text-decoration: none;
+	}
 	&--calendar-icon:before {
 		content: "";
 		display: inline-block;
