--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,6 @@
 @import (less) '../../bower_components/owl.carousel/dist/assets/owl.carousel.min.css';
+@import (less) '../../bower_components/fancybox/source/jquery.fancybox.css';
+@import 'blocks/fancybox.less';
 @import 'blocks/variables.less';
 @import 'blocks/fonts.less';
 @import 'blocks/normalize.less';
