--- a/src/less/blocks/booking-form.less
+++ b/src/less/blocks/booking-form.less
@@ -86,7 +86,8 @@
 			border-right: 1px solid #ebebeb;
 			color: #0ab89d;
 			font-size: 14px;
-			font-weight: 500;
+			font-weight: 400;
+			text-transform: uppercase;
 			&:last-child {
 				border-right: 0;
 			}
