--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -1,13 +1,12 @@
 .btn {
 	display: inline-block;
-	line-height: @btn-line-height;
 	background-color: @btn-bg;
 	text-align: center;
 	color: @btn-text-color;
 	text-transform: uppercase;
 	font-size: @btn-font-size;
 	border-radius: @btn-border-radius;
-	padding: 0 28px;
+	padding: 7px 28px;
 	border: 0;
 	&:hover {
 		background-color: @btn-bg--hover;
