--- a/src/less/blocks/placement.less
+++ b/src/less/blocks/placement.less
@@ -14,7 +14,7 @@
 	}
 	&__card {
 		margin-bottom: 19px;
-		border: 1px solid #23ae9e;
+		border: 1px solid #1da694;
 	}
 	&__card-text {
 		background-color: #fff;
