--- a/src/less/blocks/single-room-other-category.less
+++ b/src/less/blocks/single-room-other-category.less
@@ -10,6 +10,10 @@
 		@media (min-width: @screen-sm) {
 			margin-bottom: 0;
 		}
+
+		&:hover .single-room-other-category__img {
+			opacity: .8;
+		}
 	}
 	&__img {
 		height: 200px;
