--- a/src/less/blocks/fonts.less
+++ b/src/less/blocks/fonts.less
@@ -1,2 +1,3 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700&subset=latin,cyrillic);
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif+Caption&subset=latin,cyrillic);
