--- a/src/less/blocks/single-room-card.less
+++ b/src/less/blocks/single-room-card.less
@@ -41,14 +41,17 @@
 			display: none;
 			position: absolute;
 			left: 0;
-			top: 40%;
+			top: 50%;
 			transform: translate(0,-50%);
 			font-size: 0;
 			width: 100%;
 
 			@media (min-width: @screen-sm) {
 				display: block;
-				top: 50%;
+			}
+
+			@media (min-width: @screen-md) {
+				top: 40%;
 			}
 		}
 		& .owl-prev {
