--- a/src/less/blocks/variables.less
+++ b/src/less/blocks/variables.less
@@ -905,7 +905,7 @@
 @font-family:                 "Fira Sans", Helvetica, Arial, sans-serif;
 @font-family--serif:          Georgia, "Times New Roman", Times, serif;
 @font-family--monospace:      Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-h:               "PT Serif", Helvetica, Arial, sans-serif;
+@font-family-h:               'PT Serif Caption', serif;
 
 
 @font-size:                   16px;
